# deeprank-gnn-esm

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: ci.yml
deeprank_gnn/: DataSet.py
scripts/: get_fasta.py  pdb_renumber.py
src/deeprank_gnn/: GraphGenMP.py  community_pooling.py  predict.py
